# text-embeddings-inference-npu

./: .gitignore  Dockerfile  README.md
backends/core/src/: lib.rs
backends/grpc-client/src/: client.rs
backends/proto/: embed.proto
backends/python/server/: pyproject.toml  requirements.txt
backends/python/server/text_embeddings_server/: cli.py  server.py
backends/python/server/text_embeddings_server/models/: __init__.py  default_model.py  model.py  rerank_model.py  types.py
backends/python/src/: lib.rs  management.rs
core/src/: infer.rs
mind_cli/: Makefile  pyproject.toml
mind_cli/mind_cli/: import_utils.py  main.py
mind_cli/transformers/src/transformers/: modeling_utils.py
model-compile-cli/: pyproject.toml
model-compile-cli/model_compile_cli/: main.py
