[tool.poetry]
name = "mind-cli"
version = "0.1.0"
description = "使用MindIE Torch对文本嵌入/重排序模型进行编译优化"
authors = ["Hang Zhou <fjklqq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = "^0.13.0"

[tool.poetry.scripts]
mind-cli = "mind_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
